--- a/templates/assignments/index.html
+++ b/templates/assignments/index.html
@@ -18,7 +18,7 @@
                 <div class="inner-box">
                     <h5 class="title">Leave a Project</h5>
                     <div class="d-flex">
-                        <a href="" class="theme-btn btn-style-one">Get Started</a>
+                        <a href="{% url 'gwd:place_an_order' %}" class="theme-btn btn-style-one">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -27,7 +27,7 @@
                 <div class="inner-box">
                     <h5 class="title">Get Ideas on Your Project</h5>
                     <div class="d-flex">
-                        <a href="" class="theme-btn btn-style-one">Get Started</a>
+                        <a href="{% url 'gwd:place_an_order' %}" class="theme-btn btn-style-one">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -36,7 +36,7 @@
                 <div class="inner-box">
                     <h5 class="title">Leave assignments</h5>
                     <div class="d-flex">
-                        <a href="" class="theme-btn btn-style-one">Get Started</a>
+                        <a href="{% url 'gwd:place_an_order' %}" class="theme-btn btn-style-one">Get Started</a>
                     </div>
                 </div>
             </div>
